# xdsl-quantum

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html
.github/workflows/: docs.yml  lockfile.yml  test.yaml
docs/: reference.md
search/: search_index.json
src/xdsl_quantum/: __init__.py  universe.py
src/xdsl_quantum/dialects/: __init__.py  angle.py  qir.py
tests/filecheck/dialecs/qir/: ops.mlir
tests/filecheck/dialects/angle/: ops.mlir
