[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "xdsl-quantum"
description = "Utilities for quantum compilers."
readme = "README.md"
license = { text = "Apache License v2.0 with LLVM Exceptions" }
authors = [
  { name = "Sasha Lopoukhine", email = "sasha@lopoukhine.com" },
  { name = "Alex Rice", email = "alexrice999@hotmail.co.uk" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [ "xdsl~=0.67.0" ]
urls."Issue Tracker" = "https://github.com/xdslproject/xdsl-quantum/issues"
urls."Source Code" = "https://github.com/xdslproject/xdsl-quantum"
urls.Homepage = "https://xdsl.dev/xdsl-quantum"
entry-points."xdsl.universe".xdsl_quantum = "xdsl_quantum.universe:UNIVERSE"

[dependency-groups]
dev = [
  "filecheck==1.0.3",
  "lit<19",
  "prek~=0.4.0",
  "psutil",
  "pyright==1.1.411",
  "pytest>=8.3.4",
  "pytest-cov",
]
docs = [ "mkdocs-material>=9.5.48", "mkdocstrings[python]>=0.26.1" ]

[tool.hatch]
version.source = "vcs"

[tool.ruff]
# Support Python 3.10+.
target-version = "py310"
src = [ "src/", "tests/" ]
format.docstring-code-format = true
lint.select = [ "E", "F", "I", "INP", "PT", "PYI", "TID251", "UP", "W" ]
lint.ignore = [
  "E741",   # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
  "PT006",  # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
  "PT011",  # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
  "PT012",  # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
  "PYI041", # https://docs.astral.sh/ruff/rules/redundant-numeric-union
]
lint.mccabe.max-complexity = 10

[tool.bandit]
exclude_dirs = [ ".venv/" ]
skips = [ "B101" ]

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"
include = [ "docs", "src", "tests" ]
extraPaths = [ "tests" ]
enableExperimentalFeatures = true
reportAssertAlwaysTrue = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest]
ini_options.addopts = [
  "--durations=20",
  "--maxfail=5",
  "--import-mode=importlib",
]

[tool.coverage]
run.branch = true
run.concurrency = [ "multiprocessing" ]
run.parallel = true
run.relative_files = true
run.source = [ "src/" ]
report.exclude_lines = [
  "assert_never",
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  # Don't complain if tests don't hit defensive assertion code:
  "raise NotImplementedError",
  "raise RuntimeError",
  "raise TypeError",
  "raise ValueError",
]
report.format = "markdown"
